--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   local-challenger:
     image: micro-challenger:latest  # Use the image loaded from the .tar file
@@ -56,6 +54,20 @@ services:
     networks:
       - flinknet
 
+  topic-init:
+    build:
+      context: .
+      dockerfile: ./kafka/init/Dockerfile
+    container_name: topic-init
+    hostname: topic-init
+    user: root
+    depends_on:
+      - kafka1
+      - kafka2
+    command: ["tail", "-f", "/dev/null"]
+    networks:
+      - flinknet
+
   jobmanager:
     build:
       context: .
@@ -70,6 +82,7 @@ services:
       - FLINK_PLUGINS_DIR=/opt/flink/plugins
     volumes:
       - ./output:/data/output
+      - ./flink/checkpoints:/tmp/flink-checkpoints
     networks:
       - flinknet
 
@@ -88,6 +101,7 @@ services:
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
     volumes:
       - ./output:/data/output
+      - ./flink/checkpoints:/tmp/flink-checkpoints
     networks:
       - flinknet
       
@@ -106,6 +120,26 @@ services:
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
     volumes:
       - ./output:/data/output
+      - ./flink/checkpoints:/tmp/flink-checkpoints
+    networks:
+      - flinknet
+      
+  taskmanager3:
+    build:
+      context: .
+      dockerfile: ./flink/cluster/taskmanager/Dockerfile
+    container_name: taskmanager3
+    hostname: taskmanager3
+    user: root
+    depends_on:
+      - jobmanager
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=jobmanager
+      - FLINK_PLUGINS_DIR=/opt/flink/plugins
+      - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
+    volumes:
+      - ./output:/data/output
+      - ./flink/checkpoints:/tmp/flink-checkpoints
     networks:
       - flinknet
 
