--- a/flink/cluster/jobmanager/Dockerfile
+++ b/flink/cluster/jobmanager/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get update && \
 WORKDIR /app
 
 # Copy requirements and install python deps (pyflink, requests, ecc)
-COPY flink/q1-job/requirements.txt .
+COPY flink/jobs/requirements.txt .
 RUN pip3 install --no-cache-dir --upgrade pip && \
     pip3 install --no-cache-dir -r requirements.txt
     
@@ -20,7 +20,8 @@ RUN pip3 install --no-cache-dir --upgrade pip && \
 RUN wget https://repo1.maven.org/maven2/org/apache/flink/flink-python/2.0.0/flink-python-2.0.0.jar -P /opt/flink/lib/ && \
     wget https://repo1.maven.org/maven2/org/apache/flink/flink-streaming-python_2.12/1.8.3/flink-streaming-python_2.12-1.8.3.jar -P /opt/flink/lib/
 
-COPY flink/q1-job/q1_job.py /app/q1_job.py
+COPY flink/jobs/q1_job.py /app/q1_job.py
+COPY flink/jobs/q2_job.py /app/q2_job.py
 
 # Copy Kafka plugin
 COPY flink/cluster/plugins/kafka /opt/flink/plugins/kafka
