--- a/flink/cluster/taskmanager/Dockerfile
+++ b/flink/cluster/taskmanager/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
-COPY flink/q1-job/requirements.txt .
+COPY flink/jobs/requirements.txt .
 RUN pip3 install --no-cache-dir --upgrade pip && \
     pip3 install --no-cache-dir -r requirements.txt
     
