--- a/batch-producer/Dockerfile
+++ b/batch-producer/Dockerfile
@@ -7,5 +7,5 @@ WORKDIR /app
 COPY batch-producer/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY batch-producer/batch_producer.py .
+COPY batch-producer/batch_producer.py /app/batch_producer.py
 
