--- a/flink/cluster/jobmanager/Dockerfile
+++ b/flink/cluster/jobmanager/Dockerfile
@@ -11,20 +11,18 @@ RUN apt-get update && \
 # Set working dir
 WORKDIR /app
 
-# Copy requirements and install python deps (pyflink, requests, ecc)
-COPY flink/jobs/requirements.txt .
+COPY flink/jobs /app/jobs
 RUN pip3 install --no-cache-dir --upgrade pip && \
-    pip3 install --no-cache-dir -r requirements.txt
+    pip3 install --no-cache-dir -r /app/jobs/requirements.txt
     
 # Download flink-python JARs
 RUN wget https://repo1.maven.org/maven2/org/apache/flink/flink-python/2.0.0/flink-python-2.0.0.jar -P /opt/flink/lib/ && \
     wget https://repo1.maven.org/maven2/org/apache/flink/flink-streaming-python_2.12/1.8.3/flink-streaming-python_2.12-1.8.3.jar -P /opt/flink/lib/
 
-COPY flink/jobs/q1_job.py /app/q1_job.py
-COPY flink/jobs/q2_job.py /app/q2_job.py
-
 # Copy Kafka plugin
 COPY flink/cluster/plugins/kafka /opt/flink/plugins/kafka
+
+ENV PYTHONPATH=/app/jobs
 
 COPY flink/cluster/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
