--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,45 +12,56 @@ services:
     networks:
       - flinknet
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: zookeeper
+    hostname: zookeeper
+    user: root
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - flinknet
+
   kafka1:
-    image: apache/kafka:latest
+    image: confluentinc/cp-kafka:7.4.0
     container_name: kafka1
     hostname: kafka1
     user: root
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_NODE_ID=1
-      - KAFKA_PROCESS_ROLES=broker,controller
-      - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka1:9093,2@kafka2:9093
-      - KAFKA_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka1:9092
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_LOG_DIRS=/tmp/kraft-combined-logs
-      - KAFKA_CLUSTER_ID=abcdefghijklmnopqrstuv
-      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:9092,INTERNAL://kafka1:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,INTERNAL://0.0.0.0:29092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
     networks:
       - flinknet
-      
+
   kafka2:
-    image: apache/kafka:latest
+    image: confluentinc/cp-kafka:7.4.0
     container_name: kafka2
     hostname: kafka2
     user: root
+    depends_on:
+      - zookeeper
     ports:
-      - "9094:9092"
+      - "9093:9093"
     environment:
-      - KAFKA_NODE_ID=2
-      - KAFKA_PROCESS_ROLES=broker,controller
-      - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka1:9093,2@kafka2:9093
-      - KAFKA_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka2:9092
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_LOG_DIRS=/tmp/kraft-combined-logs
-      - KAFKA_CLUSTER_ID=abcdefghijklmnopqrstuv
-      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9093,INTERNAL://kafka2:29093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093,INTERNAL://0.0.0.0:29093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
     networks:
       - flinknet
 
@@ -81,7 +92,6 @@ services:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
       - FLINK_PLUGINS_DIR=/opt/flink/plugins
     volumes:
-      - ./output:/data/output
       - ./flink/checkpoints:/tmp/flink-checkpoints
     networks:
       - flinknet
@@ -100,7 +110,6 @@ services:
       - FLINK_PLUGINS_DIR=/opt/flink/plugins
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
     volumes:
-      - ./output:/data/output
       - ./flink/checkpoints:/tmp/flink-checkpoints
     networks:
       - flinknet
@@ -119,26 +128,6 @@ services:
       - FLINK_PLUGINS_DIR=/opt/flink/plugins
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
     volumes:
-      - ./output:/data/output
-      - ./flink/checkpoints:/tmp/flink-checkpoints
-    networks:
-      - flinknet
-      
-  taskmanager3:
-    build:
-      context: .
-      dockerfile: ./flink/cluster/taskmanager/Dockerfile
-    container_name: taskmanager3
-    hostname: taskmanager3
-    user: root
-    depends_on:
-      - jobmanager
-    environment:
-      - JOB_MANAGER_RPC_ADDRESS=jobmanager
-      - FLINK_PLUGINS_DIR=/opt/flink/plugins
-      - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
-    volumes:
-      - ./output:/data/output
       - ./flink/checkpoints:/tmp/flink-checkpoints
     networks:
       - flinknet
@@ -156,6 +145,22 @@ services:
       - local-challenger
     environment:
       - LOCAL_CHALLENGER_URL=http://local-challenger:8866
+    command: ["tail", "-f", "/dev/null"]
+    networks:
+      - flinknet
+      
+  csv-writer:
+    build:
+      context: .
+      dockerfile: ./csv-writer/Dockerfile
+    container_name: csv-writer
+    hostname: csv-writer
+    user: root
+    depends_on:
+      - kafka1
+      - kafka2
+    volumes:
+      - ./output:/data/output
     command: ["tail", "-f", "/dev/null"]
     networks:
       - flinknet
