--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,7 +164,7 @@ services:
       - kafka1
       - kafka2
     volumes:
-      - ./Results:/data/output
+      - ./Results/csv:/data/output
     command: ["tail", "-f", "/dev/null"]
     networks:
       - flinknet
